# llm-std-lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  grafana_dashboard.json  pyproject.toml  smoke_test.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  security.yml
docs/: conf.py  configuration_reference.md  cookbook.md  getting_started.md  index.rst  migration_guide.md
docs/adr/: adr-001-async-first.md  adr-002-provider-string-format.md  adr-003-pluggable-cache-backends.md  adr-004-httpx-not-sdks.md
docs/api/: cache.rst  client.rst  config.rst  metrics.rst  middleware.rst  providers.rst  resilience.rst  router.rst
examples/: basic_usage.py
llm_std_lib/: __init__.py  _logging.py  client.py  config.py  exceptions.py  types.py
llm_std_lib/cache/: __init__.py  encryption.py  semantic_cache.py
llm_std_lib/cache/backends/: __init__.py  base.py  chroma.py  memory.py  pinecone.py  qdrant.py  redis.py
llm_std_lib/cache/encoders/: __init__.py  base.py  local.py  openai.py
llm_std_lib/metrics/: __init__.py  collector.py  otlp.py  prometheus.py
llm_std_lib/middleware/: __init__.py  base.py  stack.py
llm_std_lib/middleware/builtins/: __init__.py  cost.py  injection.py  logger.py  pii.py  presidio_engine.py  rate_limiter.py  validator.py
llm_std_lib/providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  google.py  groq.py  lm_studio.py  ollama.py  openai.py
llm_std_lib/resilience/: __init__.py  _exceptions.py  _types.py  backend.py  circuit_breaker.py  context.py  engine.py  fallback.py  limiter.py  metrics.py  retry.py  state.py
llm_std_lib/router/: __init__.py  complexity.py  model_router.py
llm_std_lib/router/strategies/: __init__.py  base.py  complexity_based.py  cost_optimized.py  latency_optimized.py  round_robin.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_chroma_backend.py  test_redis_backend.py  test_redis_performance.py
tests/unit/: __init__.py  test_cache.py  test_cache_encryption.py  test_client.py  test_config.py  test_exceptions.py  test_metrics.py  test_middleware.py  test_providers.py  test_resilience.py  test_router.py  test_types.py
